--- a/style.css
+++ b/style.css
@@ -1,172 +1,251 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap');
+
 
 :root {
     --PrimaryColor: #2060c0;
     --SecondaryColor: #67a8fc;
     --TerciariColor: #2595c9;
+    
 }
+
 
 * {
     margin: 0;
     padding: 0;
     border: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Tilt Neon', sans-serif;
 }
 
-
-.backgroundImg {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    object-fit: cover;
-    z-index: -1;
-    filter: blur(5px);
+.navbar {
+    background-color: var(--TerciariColor);
 }
 
-body {
-    background-color: var(--SecondaryColor);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-h1 {
-    border: 1px solid var(--PrimaryColor);
-    background-color: white;
-    text-align: center;
-    border-radius: 50px;
-    margin-bottom: 100px;
-    margin-left: 260px;
-    font-size: 40pt;
-    box-shadow: 1px 1px  5px black;
-}
-
-.destaque {
-    color: #2060c0;
-}
-
-fieldset {
-    width: 27vw;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 50px;
-    border: solid 3px black;    
-    padding: 1em;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-fieldset > legend {
-    z-index: 999;
-}
-
-fieldset > div {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-wrap: wrap;
-    gap: .8em;
-}
-
-fieldset > div > div {
-    height: 6em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    z-index: 999;
-}
-
-fieldset > div > div > span {
-    padding: 0em 1.2em;
-}
-
-fieldset > div > div > p {
-    color: red;
-    opacity: 0;
-}
-
-.animaisIMG {
-    position: absolute;
-    top: 150px;
-    left: 44em;
-}
-
-.animaisIMG img {
-    height: 22em;
-}
-
-.dateContent {
-    display: flex;
-    flex-direction: row;
-    gap: .7em;
-}
-
-.dateContent div {
-    display: flex;
-    flex-direction: column;
-}
-
-.dateContent label {
-    font-size: 20px;
-    position: relative;
-    bottom: .5em;
-}
-
-.dateContent p {
-    color: red;
-    opacity: 0;
-}
-input{
-    height: 1.9em;
-    padding: 0em .8em;
-    font-size: 1.2em;
-}
-
-label {
-    font-size: 25px;
-
-}
-
-input[type='submit']{
-    text-decoration: none;
-    width: 9em;
-    text-align: center;
-    font-size: 1.5vw;
-    border: none;
-    background-color: var(--SecondaryColor);
-    color: white;
-    border-radius: 15px;
-    cursor: pointer;
-    box-shadow: 1px 1px 5px black;
-}
-
-
-legend {
-    background-color: var(--PrimaryColor);
-    border-radius: 50px;
-    font-size: 1.5vw;
-    margin-left: 2.5em;
-    color: white;
-    padding: 0em .4em;
-}
-
-
-.btns button, .btns a {
-    text-decoration: none;
-    padding: .3em 1.7em;
-    border-radius: 15px;
-    cursor: pointer;
-    background-color: var(--PrimaryColor);
-    color: white;
-    border: 1px solid var(--PrimaryColor);
-    font-size: 25px;
-    transition: .3s;
-}
-
-.btns button:hover, .btns a:hover {
-    background-color: white;
+.navbar span {
     color: var(--PrimaryColor);
+}
+
+.navbar a{
+    color: white;
+    font-size: 1.8em;
+}
+
+.navbar a:hover {
+    color: var(--PrimaryColor);
+}
+
+.dropdown a {
+    color: white !important;
+}
+
+.dropdown-menu a{
+    color: black !important;
+}
+
+.formButton {
+    background-color: var(--PrimaryColor);
+    border-radius: 15px;
+}
+
+.formButton a {
+    transition: .5s;
+}
+
+.formButton:hover a {
+    color: black;
+}
+
+header nav a {
+    text-decoration: none;
+    font-size: 1.7em;
+    font-weight: bold;
+    color: white;
+    transition: .5s;
+}
+
+header nav a:hover {
+    text-decoration: underline;
+    color: var(--SecondaryColor);
+}
+
+header > div {
+    background-image: url(../Img/headerbackground.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 25em;
+    padding: 2em;
+    color: white;
+    font-family: 'Tilt Neon', sans-serif;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+header > div > h2 {
+    font-size: 5vw;
+    
+}
+
+header > div > a {
+    cursor: pointer;
+    font-size: 1.8em;
+    border-bottom: 1px solid white;
+    text-decoration: none;
+    color: white;
+    transform: .5s;
+    z-index: 999;
+}
+
+header > div > a:hover {
+    color: var(--PrimaryColor);
+    border-bottom: 1px solid var(--PrimaryColor);
+}
+
+header > div > img {
+    position: absolute;
+    top: 234px;
+}
+
+body{
+    background-color: var(--TerciariColor);
+}
+
+main{
+    padding: 3vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
+.optionsMenu{
+    display: flex;
+    justify-content: space-around;
+    width: 70%;
+}
+
+.optionsMenu .card-img-top{
+    border-radius: 100%;
+}
+
+.optionsMenu img {
+    width: 10em;
+    transition: .1s;
+}
+
+.optionsMenu img:hover {
+    border: 1px solid white;
+    padding: .2em;
+}
+
+
+.optionsMenu .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+}
+
+.optionsMenu h5 {
+    color: white;
+}
+
+.servicesContent {
+    align-self: flex-start;
+    width: 100%;
+}
+
+.servicesContent h1 {
+    font-weight: bold;
+    border-bottom: 2px solid var(--PrimaryColor);
+    color: white;
+
+}
+
+.servicesContent > div {
+    display: flex;
+    float: none;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
+
+.servicesContent > div > div {
+    margin: .6em;
+    flex: 1 1 300px;
+}
+
+.servicesContent a {
+    overflow: hidden;
+}
+
+.servicesContent a img{
+    height: 12em;
+    object-fit: cover;
+    transition: .5s;
+}
+.servicesContent a:hover img {
+    transform: scale(1.2);
+    filter: blur(1px);
+}
+.AnimalsContent{
+    margin-top: 3vh;
+}
+.AnimalsContent img {
+    height: 70vh;
+    width: 80vw !important;
+    object-fit: cover !important ;
+
+}
+
+.AnimalsContent h1 {
+    font-weight: bold;
+    border-bottom: 2px solid var(--PrimaryColor);
+    color: white;
+}
+
+.AnimalsContent a {
+    border: 1px solid var(--PrimaryColor);
+    margin: 0 auto;
+    width: 12em;
+    height: 3em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    background-color: var(--PrimaryColor);
+    color: white;
+    border-radius: 15px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+
+}
+
+
+.aboutUs{
+    margin-top: 3vh;
+    padding: 2em 5em;
+}
+
+.aboutUs h1 {
+    font-weight: bold;
+    border-bottom: 2px solid var(--PrimaryColor);
+    color: white;
+}
+
+.aboutUs p span {
+    color: var(--PrimaryColor);
+    font-size: 30px;
+}
+
+.aboutUs p{
+    font-size: 25px;
+    margin: 0;
+}
+
+footer {
+    background-color: #212529;
+    color: white;
 }
