--- a/FormPage/FormLoginPage/formLoginPage.css
+++ b/FormPage/FormLoginPage/formLoginPage.css
@@ -36,22 +36,18 @@ body {
     height: 35em;
     background-color: white;
     width: 30em;
-    text-align: center;
     border-radius: 0px 15px 15px 0px;
 }
 
 .formContent form {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 .formContent h1 {
     padding: .5em;
     font-size: 50px;
-    
 }
-
 .formContent  div  span {
     font-size: 70px;
     color: var(--primary-color);
@@ -83,6 +79,8 @@ body {
     font-size: 14px;
     color: red;
     opacity: 0;
+    position: relative;
+    left: 10px;
 }
 
 .linkRegister {
@@ -152,9 +150,30 @@ hr {
     color: var(--primary-color);
 }
 
+.linkContent {
+    display: flex;
+    flex-direction: column;
+    gap: .6em;
+}
 a {
     font-size: 15px;
     text-decoration: none;
     color: rgb(68, 68, 253);
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5em;
+}
+
+.icon{
+    width: 16px;
+    background-color: var(--background-color);
+    padding: .2em;
+    border: 1px solid black;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+
+.icon:hover{
+    background-color: white;
 }
