--- a/FormPage/FormRegisterPage/formRegistrarPage.css
+++ b/FormPage/FormRegisterPage/formRegistrarPage.css
@@ -153,7 +153,13 @@ a {
     align-items: center;
     justify-content: center;
     gap: .5em;
+    transition: 0.5s;
 }
+
+a:hover{
+    color: var(--background-color);
+}
+
 .icon{
     width: 16px;
     background-color: var(--background-color);
