--- a/FormPage/FormLoginPage/formLoginPage.css
+++ b/FormPage/FormLoginPage/formLoginPage.css
@@ -44,9 +44,9 @@ body {
     flex-direction: column;
     align-items: center;
 }
-.formContent h1 {
-    padding: .5em;
-    font-size: 50px;
+.formContent > form > div > img {
+    height: 10em;
+    margin: 2em 0em;
 }
 .formContent  div  span {
     font-size: 70px;
@@ -135,19 +135,17 @@ hr {
     font-size: 18px;
     width: 15em;
     margin: 0 auto;
-    background-color: var(--primary-color);
-    border: 2px solid var(--primary-color);
+    background-color: rgb(46, 46, 46);
+    border: none;
     border-radius: 15px;
     padding: .4em 1.7em;
     color: white;
-    
     transition: .5s;
     font-weight: bolder;
 }
 
 .btnContent button:hover {
-    background-color: white;
-    color: var(--primary-color);
+    background-color: rgb(20, 20, 20);
 }
 
 .linkContent {
