--- a/FormPage/FormRegisterPage/formRegistrarPage.css
+++ b/FormPage/FormRegisterPage/formRegistrarPage.css
@@ -124,19 +124,17 @@ hr {
     font-size: 18px;
     width: 15em;
     margin: 0 auto;
-    background-color: var(--primary-color);
-    border: 2px solid var(--primary-color);
+    background-color: rgb(46, 46, 46);
+    border: none;
     border-radius: 15px;
     padding: .4em 1.7em;
     color: white;
-    
     transition: .5s;
     font-weight: bolder;
 }
 
 .btnContent button:hover {
-    background-color: white;
-    color: var(--primary-color);
+    background-color: rgb(20, 20, 20);
 }
 
 .linkContent {
