--- a/FormPage/FormEditPage/formEditPage.css
+++ b/FormPage/FormEditPage/formEditPage.css
@@ -19,7 +19,8 @@ body {
 }
 
 .formContent {
-    height: 27em;
+    height: 32em;
+    padding-top: 2em;
     background-color: white;
     width: 30em;
     border-radius: 15px
@@ -30,9 +31,9 @@ body {
     flex-direction: column;
     align-items: center;
 }
-.formContent h1 {
-    padding: .5em;
-    font-size: 50px;
+.formContent img {
+    height: 12em;
+    margin-bottom: 2em;
 }
 .formContent  div  span {
     font-size: 70px;
